# green2blue

./: .coverage  .gitignore  ARCHITECTURE.md  INJECTION_LOG.md  LICENSE  README.md  claudepad.md  green2blue.spec  oldpad.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: BUILDPLAN.md  CLI.md  RESTORE_PROTOCOL.md  SUPPORT_MATRIX.md
scripts/: create_empty_smsdb.sql  generate_android_export_fixture.py  install.bat  install.command  preflight_check.py  wet_test.py  wet_test_full_overwrite.py  wet_test_overwrite.py  wet_test_prepare_sync.py  wet_test_real.py  wet_test_sync.py
src/green2blue/: __init__.py  __main__.py  cli.py  corpus.py  credentials.py  exceptions.py  models.py  pipeline.py  review.py  user_paths.py  verify.py  wizard.py
src/green2blue/archive/: __init__.py  android_import.py  db.py  export_android.py  ios_import.py  merge.py  render_verify.py  report.py  stage.py  verify.py  workflow.py
src/green2blue/converter/: message_converter.py  phone.py  timestamp.py
src/green2blue/ios/: attachment.py  attributed_body.py  backup.py  crypto.py  device.py  manifest.py  mbdb.py  message_summary.py  plist_utils.py  prepare_sync.py  sms_db.py  trigger_utils.py
src/green2blue/parser/: ndjson_parser.py  zip_reader.py
src/green2blue/testing/: __init__.py  (+1 more)
tests/: conftest.py  test_android_fixture.py  test_archive.py  test_attachment.py  test_attributed_body.py  test_backup.py  test_cli.py  test_clone.py  test_corpus.py  test_crypto.py  test_device.py  test_manifest.py  test_mbdb.py  test_message_converter.py  test_message_summary.py  test_ndjson_parser.py  test_overwrite.py  test_phone.py  test_pipeline.py  test_prepare_sync.py  test_review.py  test_review_ui.py  test_sms_db.py  test_timestamp.py  test_trigger_utils.py  test_verify.py  test_wizard.py  test_zip_reader.py
tests/fixtures/: review_ui_smoke.js
(+1 files in other folders)
