[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "green2blue"
version = "0.1.0"
description = "Transfer SMS/MMS/RCS messages from Android to iPhone"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["sms", "mms", "android", "iphone", "backup", "migration"]
dependencies = [
    "cryptography>=41.0",
]
authors = [
    { name = "green2blue contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Archiving",
]

[project.urls]
Homepage = "https://github.com/discordwell/green2blue"
Repository = "https://github.com/discordwell/green2blue"
Issues = "https://github.com/discordwell/green2blue/issues"
Changelog = "https://github.com/discordwell/green2blue/releases"

[project.optional-dependencies]
device = ["pymobiledevice3>=4.0"]
dev = [
    "build>=1.2",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "twine>=5.0",
]

[project.scripts]
green2blue = "green2blue.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"green2blue.testing" = ["assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["N801"]  # Allow iOS-prefixed class names (iOSHandle, iOSMessage, etc.)
